--- a/frontend/src/components/navbar/navbar.module.css
+++ b/frontend/src/components/navbar/navbar.module.css
@@ -6,7 +6,7 @@
 }
 
 .logo {
-  width: 7em;
+  width: 4.5em;
   margin-top: 20px;
 }
 
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1600px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: left;
   font-family: "Poppins", sans-serif;
-  font-size: 28px;
+  font-size: 22px;
   margin-right: 10px;
 }
 
@@ -58,7 +58,7 @@
   font-size: 32px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 660px) {
   .navbarItems {
     display: none;
   }
@@ -68,6 +68,9 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-top: -15px;
+  }
+
+  #root {
+    font-size: x-large;
   }
 }
