--- a/frontend/src/pages/auth/page.module.css
+++ b/frontend/src/pages/auth/page.module.css
@@ -9,12 +9,17 @@ form {
 
 .title {
   text-transform: uppercase;
-  font-size: 38px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
-.authButton {
+.handleTypeButton {
   color: black !important;
   background-color: transparent;
   border: none;
+}
+
+.confirmButton {
+  background-color: transparent;
+  border: none;
+  color: rgb(3, 89, 170);
 }
