--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,9 +4,15 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
 
 #root {
   font-size: x-large;
-  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+}
+
+main {
+  max-width: 1280px;
+  margin: 0 auto;
 }
