--- a/frontend/src/pages/profile/page.module.css
+++ b/frontend/src/pages/profile/page.module.css
@@ -48,7 +48,7 @@
   margin-bottom: 5px;
 }
 
-.pending {
+.onway {
   background-color: rgb(248, 186, 72);
 }
 
@@ -56,7 +56,7 @@
   background-color: rgb(255, 85, 85);
 }
 
-.completed {
+.delivered {
   background-color: rgb(146, 251, 97);
 }
 
