--- a/frontend/src/pages/home/page.module.css
+++ b/frontend/src/pages/home/page.module.css
@@ -26,6 +26,11 @@
   margin-top: -60px;
 }
 
+.title,
+.description {
+  color: #101a1d;
+}
+
 .description,
 .imageDescription {
   text-align: justify;
@@ -36,6 +41,11 @@
   flex-direction: column;
   gap: 0.5em;
   margin-top: -30px;
+}
+
+.contactTitle,
+.contactDescription {
+  color: #101a1d;
 }
 
 .socialButtonsContainer {
@@ -68,12 +78,14 @@
   }
 
   .title,
-  .imageTitle {
+  .imageTitle,
+  .contactTitle {
     font-size: 24px;
   }
 
   .description,
-  .imageDescription {
+  .imageDescription,
+  .contactDescription {
     font-size: 18px;
   }
 
@@ -85,7 +97,7 @@
 
 @media screen and (max-width: 660px) {
   .pageContainer {
-    padding: 0.5em;
+    padding: 1em;
   }
 
   .productSection {
@@ -101,6 +113,7 @@
   .title {
     font-size: 26px;
     text-align: left;
+    margin-top: -15px;
   }
 
   .description,
