--- a/frontend/src/pages/profile/page.module.css
+++ b/frontend/src/pages/profile/page.module.css
@@ -2,17 +2,17 @@
   display: flex;
   flex-direction: column;
   gap: 0.5em;
-  padding: 0.2em;
+  padding: 1em;
 }
 
 .orderContainer {
   background-color: #101a1d;
   color: white;
-  padding: 0.7em;
   border-radius: 0.2em;
   display: flex;
   flex-direction: column;
   gap: 0.2em;
+  padding: 1em;
 }
 
 .ordersContainer {
@@ -20,11 +20,12 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 0.5em;
 }
+
 .titleName {
   text-transform: uppercase;
   font-size: 32px;
   word-wrap: break-word;
-  margin-top: 20px;
+  margin-top: -10px;
   color: #101a1d;
 }
 
@@ -81,7 +82,16 @@
 }
 
 .messageNoOrder {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  color: #101a1d;
+}
+
+.link {
+  text-decoration: underline;
+  color: #101a1d;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 660px) {
@@ -108,7 +118,7 @@
 
   .titleName {
     margin-bottom: -15px;
-    margin-top: 20px;
+    margin-top: -10px;
     font-size: 24px;
   }
 
