--- a/frontend/src/pages/cart/page.module.css
+++ b/frontend/src/pages/cart/page.module.css
@@ -25,22 +25,13 @@
   font-size: 28px;
   font-weight: 400;
   margin-left: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
-.buttonEmpty {
-  display: flex;
-  gap: 0.5em;
-  align-items: center;
-  justify-content: center;
-  width: fit-content;
-  padding: 1em;
-  background-color: #101a1d;
-  border: none;
-  color: white;
-  border-radius: 0.2em;
-  cursor: pointer;
-  text-transform: uppercase;
+.seeMore {
+  text-decoration: underline;
+  color: #101a1d;
+  font-size: 18px;
   margin-left: 20px;
 }
 
