terminando atualização dos estilos

--- a/frontend/src/components/footer/footer.module.css
+++ b/frontend/src/components/footer/footer.module.css
@@ -24,3 +24,9 @@
   text-decoration: none;
   color: white;
 }
+
+@media screen and (max-width: 660px) {
+  .footerContainer {
+    margin-top: 50px;
+  }
+}
