--- a/frontend/src/components/productCard/productCard.module.css
+++ b/frontend/src/components/productCard/productCard.module.css
@@ -4,8 +4,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: end;
-  width: 320px;
-  height: 420px;
+  width: 250px;
+  height: 400px;
+  max-width: 250px;
 }
 
 .cardContainer img {
@@ -45,4 +46,13 @@
   background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
+}
+
+@media screen and (max-width: 660px) {
+  .cardContainer {
+    height: 200px;
+    width: 350px;
+    max-width: 400px;
+    margin-bottom: -30px;
+  }
 }
